--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -3,29 +3,43 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/blue_grey_700"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash">
 
-    <TextView android:text="Suzuki Bangladesh" android:layout_width="wrap_content"
+    <!--TextView android:text="Suzuki Bangladesh" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/txt" />
+        android:id="@+id/txt" /-->
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
+        android:visibility="invisible"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/yin" />
+        android:src="@drawable/logo_icon" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView1"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:src="@drawable/yin1" />
+
+        android:src="@drawable/logo_with_shadow" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewText"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="40dp"
+        android:layout_below="@+id/imageView"
+        android:src="@drawable/logo_text" />
+
+
 
 </RelativeLayout>
