--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,45 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/blue_grey_700"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg"
+    android:orientation="vertical" >
 
-    <!--TextView android:text="Suzuki Bangladesh" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/txt" /-->
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:visibility="invisible"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/logo_icon" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView1"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
 
-        android:src="@drawable/logo_with_shadow" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageViewText"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="40dp"
-        android:layout_below="@+id/imageView"
-        android:src="@drawable/logo_text" />
-
-
-
-</RelativeLayout>
+        android:paddingTop="130dp"
+        android:src="@drawable/logo"
+        android:id="@+id/img_logo"
+        android:layout_gravity="center_horizontal" />
+</LinearLayout>
