--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" android:background="#80FFFFFF">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single" android:background="#80FFFFFF">
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/logo_icon"
