--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" tools:context=".notification.MainActivity">
@@ -13,4 +13,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/registrationProgressBar" />
 
-</LinearLayout>
+
+
+
+
+</RelativeLayout>
