--- a/app/src/main/res/layout/fragment_quotation.xml
+++ b/app/src/main/res/layout/fragment_quotation.xml
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#d8d8d8"
-        android:id="@+id/txt_name" />
+        android:id="@+id/txt_name_quo" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#e3fdf9"
-        android:id="@+id/txt_email" />
+        android:id="@+id/txt_email_quo" />
 
     <TextView
         android:layout_width="match_parent"
@@ -55,7 +55,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#d8d8d8"
-        android:id="@+id/txt_address" />
+        android:id="@+id/txt_address_quo" />
 
     <TextView
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#e3fdf9"
-        android:id="@+id/txt_cell_no" />
+        android:id="@+id/txt_cell_no_quo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#e3fdf9"
-        android:id="@+id/txt_miles" />
+        android:id="@+id/txt_miles_quo" />
 
     <TextView
         android:layout_width="0dp"
@@ -97,13 +97,13 @@
         android:gravity="center"
         android:padding="20dp"
         android:background="#e3fdf9"
-        android:id="@+id/txt_cc" />
+        android:id="@+id/txt_cc_quo" />
     </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/et_say_something"
+        android:id="@+id/et_say_something_quotation"
         android:layout_marginTop="20dp"
         android:padding="10dp"
         android:background="@drawable/border"
@@ -118,11 +118,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit"
+
         android:layout_marginLeft="50dp"
         android:textColor="#FFFFFF"
         android:layout_marginRight="50dp"
-        android:layout_below="@+id/btn_submit"
-        android:id="@+id/btn_Sign_up"
+
+        android:id="@+id/quotation_btn_submit"
         android:layout_marginTop="10dp"
         android:background="#475CCB"
         android:layout_gravity="center"
