--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,8 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/my_bike"
                 android:layout_weight="1.0"
-                android:text="@string/fa_motorcycle" />
+                android:text="@string/fa_motorcycle"
+                android:textSize="20dp"/>
 
             <Button
                 android:id="@+id/btn_spare_parts"
