--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -50,6 +50,7 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp"
+        android:checkedButton="@+id/free"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:orientation="horizontal"
@@ -62,7 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:checked="true"
+            android:id="@+id/free"
+
             android:layout_gravity="left"
             android:text="FREE"/>
         <RadioButton
@@ -85,6 +87,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/rdo_grb_service_type_2"
         android:background="@drawable/border"
+        android:checkedButton="@+id/repair"
         android:orientation="horizontal">
 
         <RadioButton
@@ -98,7 +101,8 @@
         <RadioButton
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:id="@+id/repair"
+
             android:layout_height="50dp"
             android:text="REPAIR"/>
 
