--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,69 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/login"
+
+    android:background="@drawable/bg_user"
     >
 
 
-    <!-- TODO: Update blank fragment layout -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/s_logo"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/text_holder"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
 
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_email"
-        android:hint="User Email"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="240dp"
-        />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_password"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:layout_below="@+id/login_email"
-        android:layout_marginLeft="80dp"
-        android:paddingTop="15dp"
-
-        />
+            android:layout_height="match_parent">
 
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:text="Login"
-        android:id="@+id/button"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
-        android:layout_below="@+id/login_password"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="50dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/login_email"
+                android:textColorLink="#FFFFFF"
+                android:drawableLeft="@drawable/email"
+                android:hint="Email"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:text="Forgot Password"
-        android:id="@+id/forgotPasword"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"/>
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:text="SignUP"
-        android:layout_below="@+id/button"
-        android:id="@+id/btn_Sign_up"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="50dp"
+                />
 
-        android:layout_marginTop="20dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/login_password"
+                android:textColorLink="#FFFFFF"
+                android:inputType="textPassword"
+                android:drawableLeft="@drawable/pass"
+                android:hint="Password"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
+
+                />
 
 
-</RelativeLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Login"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:textSize="16sp"
+            android:id="@+id/button"
+
+            android:background="#191919"
+            android:textColor="#FFFFFF"
+
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Forgot Password"
+                android:layout_weight="1"
+                android:id="@+id/btn_forgot_pass"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:background="#000000"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign Up"
+
+                android:id="@+id/btn_sign_up"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="#FFFFFF"
+                android:background="#000000"
+
+                />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
