--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -7,6 +7,7 @@
    >
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,6 +26,9 @@
         android:background="@drawable/text_holder"
         android:layout_weight="3"
         >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,6 +116,7 @@
                 />
 
         </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
     <LinearLayout
@@ -129,9 +134,10 @@
             android:layout_gravity="center"
             android:textSize="16sp"
             android:id="@+id/button"
-            android:background="#000000"
+
+            android:background="#191919"
             android:textColor="#FFFFFF"
-            android:layout_below="@+id/thana"
+
            />
 
 
