--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/forget_pass"
-    >
+
+    android:background="@drawable/bg_user"
     >
 
-    <!-- TODO: Update blank fragment layout -->
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/s_logo"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/text_holder"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+
+
+            android:layout_height="match_parent">
 
 
     <EditText
@@ -15,8 +45,11 @@
         android:id="@+id/old_password"
         android:hint="Old Password"
         android:inputType="textPassword"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="250dp"
+        android:drawableLeft="@drawable/pass"
+
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         />
     <EditText
         android:layout_width="wrap_content"
@@ -24,9 +57,21 @@
         android:id="@+id/new_password"
         android:hint="New Password"
         android:inputType="textPassword"
-        android:layout_marginLeft="80dp"
-        android:layout_below="@+id/old_password"
+        android:drawableLeft="@drawable/pass"
+
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         />
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
 
 
     <Button
@@ -41,4 +86,7 @@
         android:layout_marginTop="95dp"/>
 
 
-</RelativeLayout>
+    </LinearLayout>
+
+
+</LinearLayout>
