--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -40,7 +40,7 @@
 
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/old_password"
         android:hint="Old Password"
@@ -52,7 +52,7 @@
         android:backgroundTint="#FFFFFF"
         />
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/new_password"
         android:hint="New Password"
@@ -75,15 +75,17 @@
 
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
         android:text="Change Password"
         android:id="@+id/button"
         android:background="#000000"
         android:textColor="#FFFFFF"
         android:layout_below="@+id/new_password"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="95dp"/>
+        android:gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="25dp"/>
 
 
     </LinearLayout>
