--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -1,34 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/forget_pass"
+
+    android:background="@drawable/bg_user"
     >
-    >
-
-    <!-- TODO: Update blank fragment layout -->
 
 
-    <EditText
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        android:orientation="vertical"
+        android:layout_weight="1.5"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/s_logo"/>
+
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/reset_email"
-        android:hint="User Email"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="300dp"
-        />
+        android:id="@+id/new_password"
+        android:text="Enter Your Mail to Reset Password"
+        android:gravity="center_horizontal"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
 
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:text="Reset Password"
-        android:id="@+id/button"
-        android:background="#000000"
         android:textColor="#FFFFFF"
-        android:layout_below="@+id/email"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="95dp"/>
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/text_holder"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
 
 
-</RelativeLayout>
+            android:layout_height="match_parent">
+
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/old_password"
+                android:hint="Email"
+                android:textColorHighlight="#FFFFFF"
+                android:inputType="textPassword"
+                android:drawableLeft="@drawable/email"
+
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="Enter"
+            android:id="@+id/button"
+            android:background="#000000"
+            android:textColor="#FFFFFF"
+
+            android:gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="25dp"/>
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
